# phylactery

./: .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_phase3.py
.agent/agents/: python_architect.md  python_architect.md.metadata.json  python_architect.md.resolved.0
.agent/skills/: guardian-angel.md
.agent/skills/angular/: SKILL.md  SKILL.md.metadata.json
.agent/skills/app-security/: SKILL.md
.agent/skills/clean-code/: SKILL.md
.agent/skills/github-pr/: SKILL.md  SKILL.md.metadata.json  SKILL.md.resolved.0
.agent/skills/langchain-docs/: SKILL.md
.agent/skills/python_audit/: SKILL.md  SKILL.md.metadata.json
.agent/skills/typescript/: SKILL.md  SKILL.md.metadata.json  SKILL.md.resolved.0
backend/src/app/: main.py
backend/src/app/api/: models.py
backend/src/app/core/: checkpointer.py  engine.py  loader.py  observability.py
backend/src/app/core/middleware/: eviction.py  todo.py
backend/src/app/core/security/: auth.py  engine.py
frontend/src/app/features/dashboard/: dashboard.component.html  dashboard.component.ts
planeacion/: DESIGN_SPECS.md  EXECUTION_FLOWS.md  PHASE2_SUMMARY.md  ROADMAP.md  TECHNICAL_FLOW.md
src/: __init__.py
src/app/: main.py  session.py
src/app/api/: job_manager.py  models.py  sse_handler.py
src/app/api/middleware/: ingress_shield.py
src/app/api/tools/: n8n_bridge.py
src/app/core/: engine.py  loader.py  mcp_client.py  memory.py  models.py
src/app/core/backends/: __init__.py  composite.py  protocol.py  state.py  store.py
src/app/core/brain/: __init__.py  code_indexer.py  config.py  graph.py  llm_nodes.py  nodes.py  schemas.py  setup_pinecone.py  supervisor.py  test_vector_store.py  vector_store.py
src/app/core/db/: __init__.py  database.py  models.py
src/app/core/middleware/: __init__.py  eviction.py  filesystem.py  todo.py
src/app/core/security/: audit.py  auth.py  dlp.py  honey_design.md  risk_policy.py  test_auth_vectors.py  test_security_vectors.py
src/app/core/tools/: __init__.py  idempotency.py  mcp_runner.py  registry.py
src/cli/: main.py
src/phylactery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+1 files in other folders)
