[project]
name = "gravitic-planetary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.7",
    "pydantic-settings>=2.12.0",
    "python-frontmatter>=1.1.0",
    "uvicorn>=0.40.0",
]
