[project]
name = "phylactery"
version = "0.1.0"
description = "Phylactery - GitOps Multi-Agent API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "pydantic-settings>=2.12.0",
    "python-frontmatter>=1.1.0",
    "rich>=14.3.1",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[project.scripts]
phylactery = "cli.main:app"


[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
